# file-storager/docs/swagger.json
@@ -256,8 +256,8 @@
                             "type": "file"
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/handlers.FileStatusResponse"
                         }
